# real-time-coin-acceptor

./: .gitignore  CMakeLists.txt  FreeRTOSConfig.h  README.md  available_ros2_types  built_packages
apps/01_executor_pub/: CMakeLists.txt
apps/coin_acceptor_project/: CMakeLists.txt  DimensionSensor.h  Estensimetro.cpp  Servo.cpp  main.cpp
apps/coin_acceptor_project/calibration/: DimensionSensor.cpp  Estensimetro.h  Fotoresistore.cpp  Fotoresistore.h  Servo.h  main.cpp
calibration/: main.py
